[package]
name = "containd"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "containd"

[[bin]]
name = "containctl"

[dependencies]
hyperlocal = "0.9"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
rand = "0.9"
hex = "0.4"
pnet = "0.35"
regex = "1"
clap = { version = "4", features = ["derive"] }
